--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       <h1>CTF 참여인원</h1>
 
       <div class="name">유승민 (팀장)</div>
-      <div class="role">- 록키리눅스 전반적인 세팅<br>- jaeho → smyoo 상승 (스테가노그래피)<br>- smyoo → gilhyeong 상승 (.bash_login)<br>- issue 및 smyoo, gilhyeong .bash_profile 설정</div>
+      <div class="role">- 록키리눅스 전반적인 세팅<br>- jaeho → smyoo 상승 (스테가노그래피)<br>- smyoo → gilhyeong 상승 (.bash_logout)<br>- issue 및 smyoo, gilhyeong .bash_profile 설정</div>
 
       <div class="name">이길형 (팀원)</div>
       <div class="role">- 헨젤과 그레텔 페이지<br>- 알리바바 페이지<br>- FTP 구성<br>- 루트 권한 상승</div>
